# hs-weight-tracker

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  hs-weight-tracker.cabal
app/: Config.hs  Db.hs  Main.hs  Routes.hs  User.hs  Weight.hs
db/: Dockerfile
db/scripts/: init.sql
src/: Lib.hs  User.hs
src/Lib/: Auth.hs  Config.hs  Db.hs  Routes.hs  User.hs  Weight.hs
src/Lib/Auth/: Http.hs  Jwt.hs
src/Lib/Platform/: Config.hs  Crypto.hs  Db.hs  Except.hs
test/: Spec.hs
