cabal-version:      2.4
name:               hs-weight-tracker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Santiago Kent
maintainer:         santiagokent@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
  default-language: Haskell2010
  build-depends:    base ^>=4.16.4.0
  ghc-options:      -Wall

library
  import:          common-settings
  hs-source-dirs:  src
  exposed-modules:
    Lib
    Lib.Db
    Lib.Routes
    Lib.User
    Lib.Weight

  build-depends:
    , aeson
    , postgresql-simple
    , scotty
    , text
    , time
    , wai-extra

executable hs-weight-tracker
  import:         common-settings
  main-is:        Main.hs
  build-depends:  hs-weight-tracker
  hs-source-dirs: app
